After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727937 - Wishlist: Rhythmbox unnecessarily announces "Not Playing" when I close it
Wishlist: Rhythmbox unnecessarily announces "Not Playing" when I close it
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-10 07:46 UTC by Walter Garcia-Fontes
Modified: 2014-04-10 12:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Walter Garcia-Fontes 2014-04-10 07:46:41 UTC
Wishlist:
This is something happening in some desktop environments (Unity in this case), I don't know how many desktop shells are affected. And I don't know if it has a rationale, but most users that I know think it is not necessary.

Open Rhythmbox
Close Rhythmbox
Notice a notification bubble appears which announces "Not Playing" along with the RB logo.

This seems unnecessary given I'm currently not listening to anything and I actively closed the RB window - indicating that I'm not wanting to listen to something. I don't need to be told that the music player is now no longer playing.

Skype doesn't tell me it's not on a call when I close it, and firefox doesn't tell me I'm not browsing when I close that.
Comment 1 Jonathan Matthew 2014-04-10 07:48:03 UTC
What exact version of rhythmbox are you using?
Comment 2 Walter Garcia-Fontes 2014-04-10 08:08:05 UTC
Rhythmbox 3.0.1
Comment 3 André Klapper 2014-04-10 11:39:54 UTC
Confirming on F20.
Comment 4 Jonathan Matthew 2014-04-10 12:57:35 UTC
fixed in commit 998ae82; now we just close the notification when not playing.