notification: close notifications when not playing

https://bugzilla.gnome.org/show_bug.cgi?id=727937